--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,8 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th></th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +18,17 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><% if book.favorited_by?(current_user) %>
+            <p><%= link_to book_favorites_path(book), method: :delete do %>
+               <i class="fas fa-heart"></i><%= book.favorites.count %><% end %>
+               <!--いいねを押せるのは１回　いいねをしていますか？していればdelete-->
+            </p>
+            <% else %>
+            <p><%= link_to book_favorites_path(book), method: :post do %>
+               <i class="far fa-heart"></i><%= book.favorites.count %><% end %>
+            </p><% end %></td>
+            <!--いいねをしていなければ、post-->
+        <td><p>コメント件数: <%= book.book_comments.count %></p></td>
       </tr>
     <% end %>
   </tbody>
