--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,29 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-            <td><% if @book.user == current_user %>
-            <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %><% end %></td>
-            <td><% if @book.user == current_user %>
-            <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%><% end %></td>
-        </tr>
+          <td><% if @book.favorited_by?(current_user) %>
+            <p><%= link_to book_favorites_path(@book), method: :delete do %>
+               <i class="fas fa-heart"></i><%= @book.favorites.count %><% end %>
+               <!--いいねを押せるのは１回　いいねをしていますか？していればdelete--></p>
+            <% else %>
+            <p><%= link_to book_favorites_path(@book), method: :post do %>
+               <i class="far fa-heart"></i><%= @book.favorites.count %><% end %>
+            </p><% end %></td>
+          <td><p>コメント件数: <%= @book.book_comments.count %></p></td>
       </table>
+
+      <% @book.book_comments.each do |book_comment| %>
+      <p><%= image_tag book_comment.user.get_profile_image, size:"50x50" %></p>
+        <%= book_comment.comment %>
+        <%= book_comment.user.name %>
+        <!--< %= link_to "Destroy", book_book_comment(book_comment), method: :delete, class: 'btn btn-danger' %>-->
+        
+      <% end %>
+
+      <%= form_with model:[@book,@book_comment] do |f| %>
+      <%= f.text_area :comment %>
+      <%= f.submit "送信" %>
+      <% end %>
     </div>
   </div>
 </div>
