--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -7,6 +7,12 @@
   <tr>
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
+	  
+	  <th>follows</th>
+	  <th><%= %></th>
+	  
+	  <th>followers</th>
+	  <th><%= %></th>
   </tr>
 </table>
 　
