--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,12 +20,12 @@
         <td><%= book.body %></td>
         <td><% if book.favorited_by?(current_user) %>
             <p><%= link_to book_favorites_path(book), method: :delete do %>
-               <i class="fas fa-heart"></i><%= book.favorites.count %><% end %>
+               <i class="fas fa-heart" style="color: red;"></i><%= book.favorites.count %><% end %>
                <!--いいねを押せるのは１回　いいねをしていますか？していればdelete-->
             </p>
             <% else %>
             <p><%= link_to book_favorites_path(book), method: :post do %>
-               <i class="far fa-heart"></i><%= book.favorites.count %><% end %>
+               <i class="far fa-heart"　></i><%= book.favorites.count %><% end %>
             </p><% end %></td>
             <!--いいねをしていなければ、post-->
         <td><p>コメント件数: <%= book.book_comments.count %></p></td>
