--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,11 +19,11 @@
           <td><%= @book.body %></td>
           <td><% if @book.favorited_by?(current_user) %>
             <p><%= link_to book_favorites_path(@book), method: :delete do %>
-               <i class="fas fa-heart"></i><%= @book.favorites.count %><% end %>
+               <i class="fas fa-heart" style="color: red;"></i><%= @book.favorites.count %><% end %>
                <!--いいねを押せるのは１回　いいねをしていますか？していればdelete--></p>
             <% else %>
             <p><%= link_to book_favorites_path(@book), method: :post do %>
-               <i class="far fa-heart"></i><%= @book.favorites.count %><% end %>
+               <i class="far fa-heart" ></i><%= @book.favorites.count %><% end %>
             </p><% end %></td>
           <td><p>コメント件数: <%= @book.book_comments.count %></p></td>
       </table>
@@ -31,9 +31,12 @@
       <% @book.book_comments.each do |book_comment| %>
       <p><%= image_tag book_comment.user.get_profile_image, size:"50x50" %></p>
         <%= book_comment.comment %>
-        <%= book_comment.user.name %>
-        <!--< %= link_to "Destroy", book_book_comment(book_comment), method: :delete, class: 'btn btn-danger' %>-->
-        
+        <%= link_to user_path(@book.user) do%>
+         <%=book_comment.user.name %>
+        <% end %>
+        <%if book_comment.user == current_user %>
+        <%= link_to "Destroy", book_book_comment_path(book_comment.book,book_comment), method: :delete, class: 'btn btn-danger' %>
+        <% end %>
       <% end %>
 
       <%= form_with model:[@book,@book_comment] do |f| %>
